--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,9 +52,14 @@ section {
 .dynamicTableMoveRowButton {
     background-image: url("/images/dragimage.png");
     background-repeat: repeat-y;
-    cursor: s-resize;
+    cursor: move;
     width: 6px;
     height: 16px;
     margin-right: 14px;
     float: left;
+}
+
+.ghost {
+    opacity: .5;
+    background: #C8EBFB;
 }
